<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="3dp"
    android:paddingTop="3dp" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/editcreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/ll1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/ecimage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_content_description" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="2dp"
                    android:text="@string/plant_name" />

                <EditText
                    android:id="@+id/ecname"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="8dp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_water" />

                <TextView
                    android:id="@+id/eclastdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <Button
                android:id="@+id/ecwatered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/water0"
                android:onClick="waterIt" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interval" />

            <EditText
                android:id="@+id/ecdays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="5"
                android:minWidth="30dp"
                android:selectAllOnFocus="true" >
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_unit" />

            <Button
                android:id="@+id/ectime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next_water" />

            <TextView
                android:id="@+id/ecnextdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notes" />

        <EditText
            android:id="@+id/ecnotes"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:minLines="2" >
        </EditText>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plant_date" />

            <Button
                android:id="@+id/ecplanted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/eccreatedate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_date" />

            <TextView
                android:id="@+id/eccreated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            >

            <Button
                android:id="@+id/ecstop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="stopAlarm"
                android:text="@string/stop_alarm" >
            </Button>

            <Button
                android:id="@+id/ecskip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="skipAlarm"
                android:text="@string/skip_alarm" >
            </Button>
       		<Button
                android:id="@+id/ecnextdatebutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_alarmdate" >
            </Button>     
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/ecsave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:onClick="savePlant"
                android:paddingLeft="20dp"
                android:text="@string/save"
                android:textSize="25dp" >
            </Button>

            <Button
                android:id="@+id/eccancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:onClick="cancelPlant"
                android:paddingRight="20dp"
                android:text="@string/cancel"
                android:textSize="25dp" >
            </Button>
        </RelativeLayout>

        <com.google.ads.AdView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
            android:id="@+id/adView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/admob_pid"
            ads:keywords="plant,garden,water"
            ads:loadAdOnCreate="true" />
    </LinearLayout>

</ScrollView>